apps/servarr/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  labels:
    app: overseerr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5055
      targetPort: 5055
      protocol: TCP
  selector:
    app: overseerr
