apps/servarr/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  labels:
    app: overseerr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-traefik
  tls:
    - hosts:
        - overseerr.home.bstjohn.net
        - overseerr.ext.bstjohn.net
      secretName: wildcard-home-tls
  rules:
    - host: overseerr.home.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
    - host: overseerr.ext.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
